[gd_scene load_steps=15 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/HealthManager.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Components/Characters/AnimationManager.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/PositionManager.gd" type="Script" id=4]
[ext_resource path="res://Prefabs/Components/Characters/Character.gd" type="Script" id=5]
[ext_resource path="res://Prefabs/Components/Characters/CursorManager.gd" type="Script" id=6]
[ext_resource path="res://Prefabs/Components/Characters/InstaAtk.gd" type="Script" id=7]
[ext_resource path="res://Prefabs/Components/Characters/OptionSelector.gd" type="Script" id=8]
[ext_resource path="res://Prefabs/Components/Characters/ProjectileVolley.gd" type="Script" id=9]
[ext_resource path="res://Prefabs/Components/Characters/ControlScheme.gd" type="Script" id=10]
[ext_resource path="res://Prefabs/Components/Characters/QuickTimeEventChallenge.gd" type="Script" id=11]
[ext_resource path="res://Prefabs/Subscriber.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=1]
resource_name = "Flash_Red"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.803922, 0.0235294, 0.0235294, 1 ), Color( 1, 1, 1, 1 ), Color( 0.803922, 0.0235294, 0.0235294, 1 ), Color( 1, 1, 1, 1 ), Color( 0.803922, 0.0235294, 0.0235294, 1 ), Color( 1, 1, 1, 1 ), Color( 0.803922, 0.0235294, 0.0235294, 1 ), Color( 1, 1, 1, 1 ), Color( 0.803922, 0.0235294, 0.0235294, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 26.1725

[node name="Character" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HealthManager" type="Node2D" parent="."]
script = ExtResource( 2 )
max_health = 100

[node name="PositionManager" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Subscriber" parent="PositionManager" instance=ExtResource( 12 )]

[node name="CursorManager" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash_Red = SubResource( 1 )

[node name="AnimationManager" type="Node2D" parent="."]
script = ExtResource( 3 )
hit_animation = "Flash_Red"

[node name="OptionSelector" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="InstaAtk" type="Node2D" parent="OptionSelector"]
script = ExtResource( 7 )

[node name="ProjectileVolley" type="Node2D" parent="OptionSelector"]
script = ExtResource( 9 )

[node name="Duration" type="Timer" parent="OptionSelector/ProjectileVolley"]
wait_time = 5.0
one_shot = true

[node name="FireRate" type="Timer" parent="OptionSelector/ProjectileVolley"]
wait_time = 0.3
one_shot = true

[node name="QuickTimeEventChallenge" type="Node2D" parent="OptionSelector"]
script = ExtResource( 11 )

[node name="ControlScheme" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="Area2D" type="Area2D" parent="." groups=["characters"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="health_depleted" from="HealthManager" to="." method="_on_HealthManager_health_depleted"]
[connection signal="end_insta_atk" from="OptionSelector/InstaAtk" to="." method="_on_InstaAtk_end_insta_atk"]
[connection signal="end_insta_atk" from="OptionSelector/InstaAtk" to="PositionManager" method="_on_InstaAtk_end_insta_atk"]
[connection signal="start_insta_atk" from="OptionSelector/InstaAtk" to="." method="_on_InstaAtk_start_insta_atk"]
[connection signal="start_insta_atk" from="OptionSelector/InstaAtk" to="PositionManager" method="_on_InstaAtk_start_insta_atk"]
[connection signal="end_volley" from="OptionSelector/ProjectileVolley" to="." method="_on_ProjectileVolley_end_volley"]
[connection signal="start_volley" from="OptionSelector/ProjectileVolley" to="." method="_on_ProjectileVolley_start_volley"]
[connection signal="timeout" from="OptionSelector/ProjectileVolley/Duration" to="OptionSelector/ProjectileVolley" method="_on_Duration_timeout"]
[connection signal="end_qt_challenge" from="OptionSelector/QuickTimeEventChallenge" to="." method="_on_QuickTimeEventChallenge_end_qt_challenge"]
[connection signal="start_qt_challenge" from="OptionSelector/QuickTimeEventChallenge" to="." method="_on_QuickTimeEventChallenge_start_qt_challenge"]
